// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mole:assertions:assertProps should assert fields existing in an input 1`] = `
"
[context]: Mole:assertions:assertProps
[failure cause]: must have these properties: name, job
[actual value]: {"name":"shinobu"}
[actual value type]: Object"
`;

exports[`Mole:assertions:assertProps should assert fields existing in an input 2`] = `
"
[context]: Mole:assertions:assertProps
[failure cause]: must have these properties: name, job
[actual value]: undefined
[actual value type]: Nil:(undefined)"
`;

exports[`Mole:assertions:assertProps should assert fields existing in an input 3`] = `
"
[context]: Mole:assertions:assertProps
[failure cause]: must have these properties: name, job
[actual value]: null
[actual value type]: Nil:(null)"
`;
